--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,8 +1,8 @@
-<% if @user.errors.any? %>
+<% if @errors %>
   <div id="errors">
     <div class="alert alert-danger">
       <ul>
-      <% @user.errors.full_messages.each do |msg| %>
+      <% @errors.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
