User can list items for sale

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to Dealz</h1>
 
   <h2>
-    Have it but don't need it? Sell it!
+    Have it but don't need it? <%= link_to "Sell it!", new_listing_path %>
   </h2>
   <h2>
     Need it but don't have it? Find it!
