--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,12 +1,19 @@
 <div class="center jumbotron">
-  <h1>Welcome to Dealz</h1>
-
+ <h1> Welcome to Dealz </h1>
   <h2>
     Have it but don't need it? <%= link_to "Sell it!", new_listing_path %>
   </h2>
-  <h2>
-    Need it but don't have it? Find it!
-  </h2>
+
+  <div id="search_form_div">
+    <h2>
+    	Need it but don't have it?
+		  <%= form_tag listings_path, method: "get", id: "search_form" do %>
+		    <%= text_field_tag :search, params[:search], class: "form-control", id: "search_input" %>
+		    <%= submit_tag "Find it!", name: nil, class: "form-control", id: "search_submit" %>
+			<% end %>
+		</h2>
+	</div>
+
 </div>
 
 <div>
