--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,11 @@
 		  </div>
 		</header>
 		<div class="container">
+			 <div id="flash">
+	    	<% flash.each do |key, value| %>
+		    	<div class="alert alert-<%= key %>"><%= value %></div>
+		    <% end %>
+		  </div>
 	  	<%= yield %>
 		</div>
   </body>
