--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,6 @@
 <div class="center jumbotron">
-  <h1> <%= @listing.product %> <%= number_to_currency(@listing.price, unit: "MYR", format: "%n %u") %> </h1>
-  <h2> <%= @listing.description %> </h2>
+  <h1> <%= @listing.product %>  </h1>
+  <p> <%= @listing.description %> </p>
+  <h2> <%= number_to_currency(@listing.price, unit: "MYR", format: "%n %u") %> </h2>
+  <%= link_to 'Buy now', new_listing_order_path(@listing) %>
 </div>
