Started work on profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,11 @@
-<div class="center jumbotron">
-  <h1> Congratulations <%= @user.first_name %>, you've joined Dealz!</h1>
-
+<div class="row.row-eq-height">
+	<div class="col-md-3">
+		<div class="center jumbotron">
+		</div>
+	</div>
+	<div class="col-md-9">
+		<div class="center jumbotron">
+		  <h1> Hi <%= @user.first_name %>!</h1>
+		</div>
+	</div>
 </div>
